

 3.0.x =========================================================================================================
 
 5. Add Test for ThrowNullArguments[Done]
 
 6. Fix RandomAlphaNumericGenerator Issues
    Add Test for RandomAlphaNumericGenerator




 3.1.0/features =========================================================================================================

 -	Cache delegates to optimize "TypeExtension.PropertyValue" calls.
 -	Make IOperation into an awaitable type
 -	Make Operation functions debugger hidden
 -	Add a continuation for operations that takes an enumeration of operations and continues when ALL, ANY, or
    SOME (with a specific number) completes.
 -	Change CommonDataTypes.BinaryData to CommonDataTypes.EncodedBinaryData
 -	add dispaly logic for CommonDataTypes.EncodedBinaryData, CommonDataTypes.Tags